# github-helper

./: .env.example  .gitignore  CLAUDE.md  Claude Agent - Do-Good GitHub Helper.md  Claude Agent - dogood.md  LICENSE  README.md  pyproject.toml  requirements.txt  scan_log.txt  tiers.json
src/: cli.py  concurrency.py  config.py  db.py  feedback.py  migration.py  model_selector.py  orchestrator.py  ranker.py  rate_coordinator.py  scan_christian.py  scan_dump.py  scanner.py  solver.py  tagger.py  telegram.py  utils.py
