[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "github-do-good-agent"
version = "0.1.0"
description = "Autonomous agent that finds and fixes bugs on social-good GitHub projects"
requires-python = ">=3.11"
dependencies = [
    "ghapi>=1.0.6",
    "claude-agent-sdk>=0.1.0",
    "typer[all]>=0.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
dogood = "src.cli:app"
